test/compare/testdata/fixedbugs/issue881.go
// errorcheck

package main

import (
	"fmt"
	"fmt" // ERROR "fmt redeclared as imported package name"
)

func main() {
	_ = fmt.Print
}
